fixing navbar alignment

--- a/docs/style.css
+++ b/docs/style.css
@@ -70,8 +70,8 @@ h2, h3 {
 
 .textNav{
     position: fixed;
-    margin: 200px 1000px 50px 15px;
-    width: 100px;
+    margin: 170px 1000px 50px 15px;
+    width: 125px;
 }
 
 /* text boxes*/
